aggiunta ui di gioco. rimosso hibernate